--- a/CSS/bootstrap-5.3.2-dist/css/main.css
+++ b/CSS/bootstrap-5.3.2-dist/css/main.css
@@ -1,6 +1,7 @@
 .whisper {
     font-family: 'whisper', cursive;
     font-size: 34pt;
+    margin-bottom: 1px;
 }
 .noborder-list {
     border-style: hidden;
@@ -18,6 +19,7 @@
 .montserrat_p{
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
+    margin-top: 34px;
 }
 .list-center{
     display: inline-block;
@@ -28,4 +30,10 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin:30px 0px 50px;
+}
+.img-rounded{
+    border-radius: 50%;
+    height: 150px;
+    margin-top: 50px;
 }
